--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>$Title$</title>
+	<link rel="stylesheet" href="/dist/layui/css/layui.css">
+	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="/dist/layui/layui.js"></script>
+	<script>
+		// 主入口，引入需要使用的模块
+		layui.use(['layer', 'element', 'flow', 'laytpl'], function () {
+
+			var layer   = layui.layer,//弹出层
+			    element = layui.element(),//元素操作
+			    laytpl  = layui.laytpl,//前端模板
+			    flow    = layui.flow;//流加载
+
+
+
+
+		})
+	</script>
+	<title>Title</title>
 </head>
 <body>
-$END$
+
 </body>
 </html>
