--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="/dist/layui/css/layui.css">
+	<link rel="stylesheet" href="./dist/layui/css/layui.css">
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="/dist/layui/layui.js"></script>
+	<script src="./dist/layui/layui.js"></script>
 	<script>
 		// 主入口，引入需要使用的模块
-		layui.use(['layer', 'element', 'flow', 'laytpl'], function () {
+		layui.use(['layer', 'element', 'flow', 'laytpl','form'], function () {
 
 			var layer   = layui.layer,//弹出层
 			    element = layui.element(),//元素操作
 			    laytpl  = layui.laytpl,//前端模板
+			    form    = layui.form,
 			    flow    = layui.flow;//流加载
 
 
@@ -24,6 +25,46 @@
 	<title>Title</title>
 </head>
 <body>
-
+<div class="fahuo" id="fahuo" style="width:400px;">
+	<form action="" class="layui-form">
+		<div class="layui-form-item">
+			<label class="layui-form-label">发货方式：</label>
+			<div class="layui-input-block">
+				<select name="psid" lay-filter="aihao">
+					<option value="0">买家自提</option>
+					<option value="1">快递物流</option>
+				</select>
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">行内选择框</label>
+			<div class="layui-input-inline">
+				<select name="quiz1">
+					<option value="">请选择省</option>
+					<option value="浙江" selected="">浙江省</option>
+					<option value="你的工号">江西省</option>
+					<option value="你最喜欢的老师">福建省</option>
+				</select>
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">快递单号：</label>
+			<div class="layui-input-block">
+				<input type="text" name="username" lay-verify="number" placeholder="请输入" autocomplete="off" class="layui-input">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">快递公司：</label>
+			<div class="layui-input-block">
+				<input type="text" name="username" lay-verify="number" placeholder="请输入" autocomplete="off" class="layui-input">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<div class="layui-input-block">
+				<button class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>
+			</div>
+		</div>
+	</form>
+</div>
 </body>
 </html>
